[package]
name = "distance-sensor"
version = "0.1.0"
authors = ["Gabriel Cruz <gabrieldemelocruz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32", "embassy", "async", "embassy-executor-thread", "embassy-time-timg0" ] }

embassy-time = { version = "0.3.0" }
embassy-executor = { version= "0.5.0", features = ["integrated-timers", "nightly"] }

esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
