[package]
name = "lora-rs-esp"
version = "0.1.0"
authors = ["Gabriel Cruz <gabrieldemelocruz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32", "embassy", "async", "embassy-executor-thread", "embassy-time-timg0", "embedded-hal-02"] }

embassy-time = { version = "0.3.0" }
embassy-executor = { version= "0.5.0", features = ["integrated-timers", "nightly"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
lora-phy = { version = "3" , features = ["lorawan-radio"] }
lorawan-device = { version = "0.12.1", default-features = false, features = ["embassy-time", "default-crypto", "defmt"] }
embedded-hal-bus = { version = "0.1.0", features = ["async"]}
embedded-nal-async = "0.4.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
