[package]
name = "lora-rs-esp"
version = "0.1.0"
authors = ["Gabriel Cruz <gabrieldemelocruz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32", "log", "defmt-espflash"] }
log = { version = "0.4.20" }

esp-hal = { git ="https://github.com/esp-rs/esp-hal", rev = "60e4b882efce5d0d29c7283c286eb8cb6b7b1bf7", features = [ "esp32", "embedded-hal", "embassy", "async", "embassy-time-timg0", "embedded-hal-async"] }
embassy-time = { version = "0.3.0" }
embassy-executor = { version= "0.5.0", features = ["integrated-timers", "nightly"] }
embedded-hal-bus = { version = "0.2.0", features = ["async"]}

lora-phy = { path = "./lora-rs/lora-phy", features = ["lorawan-radio"] }
lorawan-device = { path = "./lora-rs/lorawan-device", default-features = false, features = ["embassy-time", "default-crypto", "defmt"] }


[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
